--- a/ncut_training/.vscode/settings.json
+++ b/ncut_training/.vscode/settings.json
@@ -18,6 +18,7 @@
     "algorithm": "cpp",
     "iosfwd": "cpp",
     "vector": "cpp",
-    "queue": "cpp"
+    "queue": "cpp",
+    "iostream": "cpp"
   }
 }
