--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,8 @@
     "*.HLA*": "hlasm",
     "iostream": "cpp",
     "algorithm": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "utility": "cpp",
+    "functional": "cpp"
   }
 }
