--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 C
-Python
-MyTinySTL
-Web
+Python/
+MyTinySTL/
+Web/
 .DS_Store
 *.bin
-.cph
-.out
+*.cph
+*.out
 modern-cpp-tutorial/
 test
-grpc
+grpc/
+*.idea
+*.vscode
