--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
     "functional": "cpp",
     "iosfwd": "cpp",
     "ios": "cpp",
-    "array": "cpp"
+    "array": "cpp",
+    "map": "cpp"
   }
 }
