--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,23 @@
     "map": "cpp",
     "deque": "cpp",
     "stack": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "__bit_reference": "cpp",
+    "__hash_table": "cpp",
+    "__split_buffer": "cpp",
+    "__tree": "cpp",
+    "filesystem": "cpp",
+    "forward_list": "cpp",
+    "initializer_list": "cpp",
+    "iterator": "cpp",
+    "list": "cpp",
+    "regex": "cpp",
+    "set": "cpp",
+    "span": "cpp",
+    "string_view": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "valarray": "cpp",
+    "*.inc": "cpp"
   }
 }
