--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
     "unordered_map": "cpp",
     "unordered_set": "cpp",
     "valarray": "cpp",
-    "*.inc": "cpp"
+    "*.inc": "cpp",
+    "random": "cpp"
   }
 }
