--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,8 @@
     "unordered_set": "cpp",
     "valarray": "cpp",
     "*.inc": "cpp",
-    "random": "cpp"
+    "random": "cpp",
+    "bitset": "cpp",
+    "chrono": "cpp"
   }
 }
