--- a/VP_WC2022/.vscode/settings.json
+++ b/VP_WC2022/.vscode/settings.json
@@ -17,6 +17,8 @@
     "*.HLA*": "hlasm",
     "algorithm": "cpp",
     "ios": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "random": "cpp",
+    "regex": "cpp"
   }
 }
