--- a/CodeForces/.vscode/settings.json
+++ b/CodeForces/.vscode/settings.json
@@ -15,6 +15,8 @@
     "*.ASSEMBLE*": "hlasm",
     "*.HLASM*": "hlasm",
     "*.HLA*": "hlasm",
-    "vector": "cpp"
+    "vector": "cpp",
+    "ios": "cpp",
+    "chrono": "cpp"
   }
 }
