CF round784 Div2

--- a/CodeForces/.vscode/settings.json
+++ b/CodeForces/.vscode/settings.json
@@ -17,6 +17,7 @@
     "*.HLA*": "hlasm",
     "vector": "cpp",
     "ios": "cpp",
-    "chrono": "cpp"
+    "chrono": "cpp",
+    "iostream": "cpp"
   }
 }
