--- a/ICPC/KunMing2022/regional/.vscode/settings.json
+++ b/ICPC/KunMing2022/regional/.vscode/settings.json
@@ -17,6 +17,8 @@
     "*.HLA*": "hlasm",
     "iostream": "cpp",
     "vector": "cpp",
-    "iosfwd": "cpp"
+    "iosfwd": "cpp",
+    "functional": "cpp",
+    "iomanip": "cpp"
   }
 }
