CodeJam failed in Round 1...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -110,6 +110,8 @@
     "tuple": "cpp",
     "typeindex": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "__availability": "cpp",
+    "memory_resource": "cpp"
   }
 }
