--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -124,5 +124,6 @@
     "semaphore": "cpp",
     "stop_token": "cpp",
     "syncstream": "cpp"
-  }
+  },
+  "C_Cpp.autocompleteAddParentheses": true
 }
